# layer-toolkit

./: .gitignore  2D_layers.py  CITATION.cff  LICENSE  README.md  bond_analysis.py  config.example.json  elf_analysis.py  max_ELF.py  pyproject.toml
layer_toolkit/: __init__.py  cli.py  config.py
layer_toolkit/analysis/: __init__.py  bonds.py  elf.py
layer_toolkit/generation/: __init__.py  jobs.py  layers.py
layer_toolkit/io/: __init__.py  resources.py
layer_toolkit/resources/: __init__.py  incar_relax.in  incar_scf.in  job_template.sh
tests/: __init__.py  test_analysis_bonds.py  test_analysis_elf.py  test_cli.py  test_config.py  test_elf_hotspots.py  test_generation_selection.py  test_jobs.py  test_layers_generation.py  test_placeholder.py
