[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layer-toolkit"
version = "0.1.0"
description = "Utilities for generating layered structures and analyzing VASP outputs"
readme = "README.md"
authors = [
  { name = "Austin Ellis" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pymatgen>=2022.0.0",
  "mp-api>=0.34.0",
]

[project.optional-dependencies]
tests = [
  "pytest>=7.0",
]

[project.scripts]
layer-toolkit = "layer_toolkit.cli:main"
